[package]
name = "coinbase-rs"
version = "0.2.0"
authors = ["John Barker <dev@j16r.net>"]
edition = "2018"
description = "Coinbase client for Rust"
repository = "https://github.com/j16r/coinbase-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "exchange", "coinbase", "bitcoin" ]

[dependencies]
base64 = "0.10"
bigdecimal = { version = "0.2", features = [ "serde" ] }
chrono = { version = "0.4", features = [ "serde" ] }
failure = "0.1"
hmac = "0.7"
hyper = {version="0.14.4", features=["client", "http1", "http2"]}
hyper-tls = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
tokio = {version="1.2.0", features=["rt", "rt-multi-thread", "macros"]}
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
